--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@eslint/js": "^9.9.1",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.4",
-    "eslint": "^9.9.1",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "eslint": "^9.10.0",
     "eslint-plugin-react": "^7.35.2",
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.9.0",
@@ -18,9 +20,7 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "webpack"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
+    "build:dev": "webpack --env mode=development",
+    "build:prod": "webpack --env mode=production"
   }
 }
