fix: correct ts options for webpack config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,10 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node"
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
   }
 }
