--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-react": "^7.35.2",
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.9.0",
+    "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.3.3",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
