--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.4.0",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "scripts": {
+    "start": "webpack serve --env mode=development",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production"
   }
