feat: fix eslint errors from react and ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,
     "module": "es6",
     "target": "es5",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true,
     "moduleResolution": "node"
   },
@@ -16,5 +16,5 @@
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
+  },
 }
