--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,16 @@
   ],
   "rules": {
     "react/prop-types": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-no-undef": [
+      "error",
+      { "allowGlobals": true }
+    ]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
