--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^9.10.0",
     "eslint-plugin-react": "^7.35.2",
     "eslint-webpack-plugin": "^4.2.0",
+    "file-loader": "^6.2.0",
     "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.3.3",
