--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
+    "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
