--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13"
